# codex-soul-system

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  install.ps1  pyproject.toml
.codex-plugin/: plugin.json
docs/: architecture.md
plugins/soul-backend-sample/: pyproject.toml
plugins/soul-backend-sample/src/soul_backend_sample/: __init__.py  _plugin.py
scripts/: soul-hook.ps1  soul.ps1
soul/: __about__.py  __init__.py  _base.py  _exceptions.py  _soul.py  _types.py
soul/backends/: __init__.py  _file.py  _sqlite.py
templates/: @current.md  evolution.md  identity.md  index.md  moments.md  patterns.md
tests/: _local_test.py  test_extreme.py  test_soul.py  test_soul_v12.py  test_soul_v13.py
