[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-soul"
version = "1.1.0"
description = "Codex Soul Memory System - cross-session identity continuity"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["soul", "soul.*"]

[project.entry-points."soul.backend"]
soul-file = "soul.backends"
