[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-backend-sample"
version = "1.1.0"
description = "Sample JSON backend plugin for Codex Soul System"
requires-python = ">=3.10"

[project.entry-points."soul.backend"]
soul-backend-sample = "soul_backend_sample"
